@@ -2,6 +2,7 @@
 LEIA - Fix for artwork helper on home screen
 LEIA - Add extra download art icon
 LEIA - Update artwork helper vars (thanks Guilouz!)
+LEIA - Fix artwork helper vars
 Fix screen calibration bug
 Tweak EPG grid
 
